<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_progress_dialog_with_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_dialog_with_number"/>

    <Button
        android:id="@+id/btn_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog"/>

    <Button
        android:id="@+id/btn_alert_dialog_with_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_with_list"/>

    <Button
        android:id="@+id/btn_alert_dialog_with_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_with_choice"/>

    <Button
        android:id="@+id/btn_progress_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_dialog"/>

    <Button
        android:id="@+id/btn_custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"/>

    <Button
        android:id="@+id/btn_custom_dialog_with_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_with_title"/>

    <Button
        android:id="@+id/btn_dialog_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment"/>

</LinearLayout>