<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/cross_in_fade_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_pager_fade_in_out"/>

    <Button
        android:id="@+id/view_pager_slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewpager_slide_anim"/>

    <Button
        android:id="@+id/card_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_animation" />

    <Button
        android:id="@+id/zoom_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zoom_animation" />

    <Button
        android:id="@+id/layout_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_change_animate" />
</LinearLayout>