<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_default_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_toast"/>

    <Button
        android:id="@+id/btn_gravity_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Toast 居中"/>

    <Button
        android:id="@+id/btn_toast_with_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_with_image"/>
    <Button
        android:id="@+id/btn_custom_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_toast"/>
</LinearLayout>